...
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addYourBusiness">

        <EditText
            android:id="@+id/gardenName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:hint="@string/gardenNameEx"
            android:textColor="@color/darkGreen"
            android:textSize="16sp" />
...
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BusinessNamelinearLayout">

        <EditText
            android:id="@+id/gardenAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/cgAddressEx" />
    </LinearLayout>
...
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/businessOwnerLinearLayout">

        <EditText
            android:id="@+id/gardenArea"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/cgAreaEx"
            android:textColor="@color/darkGreen" />
...
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/businessLocationLinearLayout">

        <EditText
            android:id="@+id/gardenLocation"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="link"
            android:textColor="@color/darkGreen" />
...
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ContactNolinearLayout">

        <EditText
            android:id="@+id/gardenPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/cgPhoneNumberEx"
            android:textColorHint="@color/black"
...
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLinearLayout">

        <EditText
            android:id="@+id/gardenDescription"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/cgDescriptionEx"
            android:inputType="textMultiLine" />
...
            android:backgroundTint="@color/darkGreen"
            android:text="@string/cgbtnCancel">

        </Button>

        <Button
            android:id="@+id/gardenSubmitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkGreen"
            android:text="@string/cgbtnAdd">

        </Button>
...
